--- a/src/_config.yml
+++ b/src/_config.yml
@@ -16,7 +16,7 @@ title                    : "吉田の教材文庫"
 title_separator          : "-"
 name                     : &name "吉田勝俊"
 description              : "講義と書籍のサポートページ"
-url                      : "https://ktysd.github.io/edu" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ktysd.github.io" # e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
