--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 *.gem
+*.swp
+*.sublime-project
+*.sublime-workspace
 .bundle
+.DS_Store
 .jekyll-metadata
 .sass-cache
+_asset_bundler_cache
 codekit-config.json
 Gemfile.lock
+node_modules
+npm-debug.log*
